--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,11 @@
         <input type="text" name="customer_name" required>
         </label> 
         </p>
+            <p>
+        <label>address
+        <input type="text" name="customer_address" required>
+        </label> 
+        </p>
         
         <p>
         <label>Phone 
